--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ categories:
 	<div class="col-lg-12">
 		<div class="smallhead">
       <p>
-        The Data Science Lab at the <a class="off" href="http://www.donga.ac.kr/">Dong-A University</a> aims at incorporating a knowledge graph into recommender systems. We pursue discovering potential paths between users and items discovered by exploring potential, dynamic interlinks within an evolving knowledge graph. We have applied various kinds of recommendation, analytics and reasoning techniques to real-time processing of data streams and (quasi-)static datasets in air quality watch, in smart energy monitoring, in location intelligence applications, in retail tech applications, in digital twin, in massive online open courses, and so on.
+		The Data Science Lab at <a class="off" href="http://www.donga.ac.kr/">Dong-A University</a> aims to incorporate a knowledge graph into recommender systems. Our goal is to discover potential paths between users and items by exploring dynamic interlinks within an evolving knowledge graph. We apply various recommendation, analytics, and reasoning techniques to real-time processing of data streams and (quasi-)static datasets in areas such as air quality monitoring, smart energy monitoring, location intelligence, retail tech, massive online open courses, and more.
       </p>
 		</div>
 	</div>
