--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ categories:
   <div class="col-lg-12">
     <div class="float-lg-right" style="vertical-align: bottom; display: table-cell;">
 		<a class="off" href="https://calendar.app.google/M4gqygBDEkuQGSog9">
-			<img width=120 src="Talks with AI Crews">
-			</a>
+			Talks with AI Crews
+		</a>
 		<a class="off" href="/calendar/">
 			<img width=120 src="/images/dsl-text-vertical-logo.png"/>
 		</a>
