--- a/papers/index.html
+++ b/papers/index.html
@@ -47,6 +47,12 @@ categories:
       <div class="media-body">
         <div class="smallhead mb-1"><a href="{{ paper.url }}" class="off">{{ paper.title }}</a></div>
         <p class="note"><strong>{{ paper.ref }}</strong></p>
+        {% if paper.feature %}
+            {% assign features = paper.feature | split: '; ' %}
+            {% for feature in features %}
+                <span class="badge badge-primary"><strong>{{ feature }}</strong></span>
+            {% endfor %}
+        {% endif %}
       </div>
       <a href="{{ paper.url }}">
         <img class="ml-3" width=100 class="media-object" src="{{ paper.image }}">
