updates paper list

--- a/papers/index.html
+++ b/papers/index.html
@@ -46,7 +46,7 @@ categories:
     <div class="media">
       <div class="media-body">
         <div class="smallhead mb-1"><a href="{{ paper.url }}" class="off">{{ paper.title }}</a></div>
-        <p class="note"><strong>{{ paper.ref }}</strong></p>
+        <p class="note" style="margin-bottom: 0;"><strong>{{ paper.ref }}</strong></p>
         {% if paper.feature %}
             {% assign features = paper.feature | split: ';' %}
             {% for feature in features %}
