--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@ categories:
 <div class="bigspacer"></div>
 
 <div class="row">
+	<div class="smallhead">
+		<textarea id="text-area" class="form-control" rows="5" readonly></textarea>
+	</div>
 	<div class="col-lg-12">
-		<div class="smallhead">
-      <p>
-		The Data Science Lab at <a class="off" href="http://www.donga.ac.kr/">Dong-A University</a> aims to incorporate a knowledge graph into recommender systems. Our goal is to discover potential paths between users and items by exploring dynamic interlinks within an evolving knowledge graph. We apply various recommendation, analytics, and reasoning techniques to real-time processing of data streams and (quasi-)static datasets in areas such as air quality monitoring, smart energy monitoring, location intelligence, retail tech, massive online open courses, and more.
-      </p>
-		</div>
+		<button id="toggle-button" class="btn btn-primary">Switch to Korean</button>
 	</div>
 </div>
 
