--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ categories:
       <a class="off" href="https://www.donga.ac.kr/">
         <img width=120 src="/images/logos/logo_donga.jpg">
       </a>
+	  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=PKin2ZWa1P-EYJ9vuChq6Yl25PdDuoOw4mQC5AGxCZA&co=5b4ae2&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
 <!--	  <a class="off" href="https://www.donga.ac.kr/gzSub_003022.aspx">-->
 <!--		컴퓨터AI공학부-->
 <!--	  </a>&nbsp; &nbsp; &nbsp; &nbsp;-->
