--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ categories:
 		<!-- <a class="off" href="https://calendar.app.google/M4gqygBDEkuQGSog9">
 			Talks with AI Crews
 		</a> -->
-		<a class="off" href="/calendar/">
+		<a class="off" >
 			<img width=120 src="/images/dsl-text-vertical-logo.png"/>
 		</a>
       <a class="off" href="https://www.donga.ac.kr/">
