--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ categories:
 <div class="row">
   <div class="col-lg-12">
     <div class="float-lg-right" style="vertical-align: bottom; display: table-cell;">
-		<!-- <a class="off" href="https://calendar.app.google/M4gqygBDEkuQGSog9">
-			Talks with AI Crews
-		</a> -->
+		<a class="off" href="https://github.com/CarbonAra-CBA">
+			<img width=120 src="/images/carbonara_logo.png"/>
+		</a>
 		<a class="off" >
 			<img width=120 src="/images/dsl-text-vertical-logo.png"/>
 		</a>
