--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@ categories:
       <a class="off" href="https://www.donga.ac.kr/">
         <img width=120 src="/images/logos/logo_donga.jpg">
       </a>
+	  <a class="off" href="https://github.com/datascience-labs" target="_blank" style="font-size: 40px; color: black; margin-left: 10px;">
+		<i class="fa fa-github"></i>
+	  </a>
 	  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=PKin2ZWa1P-EYJ9vuChq6Yl25PdDuoOw4mQC5AGxCZA&co=5b4ae2&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
 <!--	  <a class="off" href="https://www.donga.ac.kr/gzSub_003022.aspx">-->
 <!--		컴퓨터AI공학부-->
