--- a/index.html
+++ b/index.html
@@ -192,20 +192,22 @@ categories:
 
 <div class="row">
   <div class="col-lg-12">
-    <div class="float-lg-right" style="vertical-align: bottom; display: table-cell;">
+    <div class="float-lg-right d-flex align-items-end" style="gap: 10px;">
 		<a class="off" href="https://github.com/CarbonAra-CBA">
-			<img width=120 src="/images/carbonara_logo.png"/>
+		  <img src="/images/carbonara_logo.png" alt="CarbonAra" style="height: 60px;">
 		</a>
-		<a class="off" >
-			<img width=120 src="/images/dsl-text-vertical-logo.png"/>
+		<a class="off">
+		  <img src="/images/dsl-text-vertical-logo.png" alt="DSL" style="height: 60px;">
 		</a>
-      <a class="off" href="https://www.donga.ac.kr/">
-        <img width=120 src="/images/logos/logo_donga.jpg">
-      </a>
-	  <a class="off" href="https://github.com/datascience-labs" target="_blank" style="font-size: 40px; color: black; margin-left: 10px;">
-		<i class="fa fa-github"></i>
-	  </a>
-	  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=PKin2ZWa1P-EYJ9vuChq6Yl25PdDuoOw4mQC5AGxCZA&co=5b4ae2&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+		<a class="off" href="https://www.donga.ac.kr/">
+		  <img src="/images/logos/logo_donga.jpg" alt="DongA University" style="height: 60px;">
+		</a>
+		<a class="off" href="https://github.com/datascience-labs" target="_blank" style="display: flex; align-items: center;">
+		  <i class="fab fa-github" style="font-size: 48px; color: black;"></i>
+		</a>
+		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=PKin2ZWa1P-EYJ9vuChq6Yl25PdDuoOw4mQC5AGxCZA&co=5b4ae2&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+	</div>
+	  
 <!--	  <a class="off" href="https://www.donga.ac.kr/gzSub_003022.aspx">-->
 <!--		컴퓨터AI공학부-->
 <!--	  </a>&nbsp; &nbsp; &nbsp; &nbsp;-->
