--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="smallhead">
-      <p>
-		The Data Science Lab at <a class="off" href="http://www.donga.ac.kr/">Dong-A University</a> aims to incorporate a knowledge graph into recommender systems. Our goal is to discover potential paths between users and items by exploring dynamic interlinks within an evolving knowledge graph. We apply various recommendation, analytics, and reasoning techniques to real-time processing of data streams and (quasi-)static datasets in areas such as air quality monitoring, smart energy monitoring, location intelligence, retail tech, carbon-aware-computing, massive online open courses, and more.
-      </p>
-		</div>
+		<p>
+			The Data Science Lab at <a class="off" href="http://www.donga.ac.kr/">Dong-A University</a> aims to incorporate a knowledge graph into recommender systems. Our goal is to discover potential paths between users and items by exploring dynamic interlinks within an evolving knowledge graph. We apply various recommendation, analytics, and reasoning techniques to real-time processing of data streams and (quasi-)static datasets in areas such as air quality monitoring, smart energy monitoring, location intelligence, retail tech, carbon-aware-computing, massive online open courses, and more.
+		</p>
+		<p>
+			🎓 We are currently recruiting master's and Ph.D. students for the 2026 academic year!<br>
+			📬 If you're passionate about data science, knowledge graphs, and real-world applications, feel free to <a href="mailto:sjchun@dau.ac.kr">contact us</a>.
+		  </p>
+		  <p>
+			🎓 2026학년도 학부인턴, 석사 및 박사과정 학생을 모집합니다!<br>
+			📬 데이터 과학, 지식 그래프, 실세계 문제 해결에 관심이 있다면 <a href="mailto:sjchun@dau.ac.kr">문의해 주세요</a>.
+		  </p>
+	</div>
 	</div>
 </div>
 
